deploy-k8s-demo/deploy-webpage-blue.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webpage-blue

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage-blue
  namespace: webpage-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webpage-blue
  template:
    metadata:
      labels:
        app: webpage-blue
    spec:
      containers:
      - name: webpage-blue
        image: fabricioveronez/web-color:blue
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi

---

apiVersion: v1
kind: Service
metadata:
  name: webpage-blue
  namespace: webpage-blue
spec:
  selector:
    app: webpage-blue
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-blue-ingress
  namespace: webpage-blue
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-staging-demo
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:915014535524:certificate/f3e435ba-4e65-4720-9157-9e1e69bdadb8    
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'    
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: alb
  rules:
    - host: webpage-blue.kdop.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpage-blue
                port:
                  number: 80
