deploy-k8s-demo/deploy-webpage-green.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webpage-green

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage-green
  namespace: webpage-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpage-green
  template:
    metadata:
      labels:
        app: webpage-green
    spec:
      containers:
      - name: webpage-green
        image: fabricioveronez/web-color:green
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi

---

apiVersion: v1
kind: Service
metadata:
  name: webpage-green
  namespace: webpage-green
spec:
  selector:
    app: webpage-green
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-green-ingress
  namespace: webpage-green
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-staging-demo
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:915014535524:certificate/f3e435ba-4e65-4720-9157-9e1e69bdadb8    
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'    
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: alb
  rules:
    - host: webpage-green.kdop.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpage-green
                port:
                  number: 80
